--- a/name.css
+++ b/name.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap');
 .enlen {
     color: aliceblue;
     font-size: 2.5em;
@@ -33,4 +34,7 @@
     cursor: pointer;
     background-color: #00b4b5;
     border-radius: 0.2em;
+}
+body {
+    font-family: Didact Gothic;
 }
