--- a/next.css
+++ b/next.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Didact+Gothic&display=swap');
 .name{
     color: aliceblue;
     font-size: 3em;
@@ -35,4 +36,7 @@ img{
 .description {
     opacity: 60%;
     height: 15%;
+}
+body {
+    font-family: Didact Gothic;
 }
